modify the APIs
